welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:1: error: Int.type does not take parameters
def eq(a:Int, b:Int, c:Int)=Int {
                                ^